휴고 블로그 설정 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -158,12 +158,11 @@ venv.bak/
 *~ 
 
 # blog
-/content
-/public
-/static
-/themes
+content/
+public/
+resources/
+config/
+data/
+static/wordpress/
 .hugo_build.lock
 author.mailmap
-/blog/data/popular.json
-hugo.yaml
-/resources
