--- a/hugo.yaml
+++ b/hugo.yaml
@@ -44,7 +44,7 @@ menu:
     - name: "식도락"
       url: "/gourmet/"
       weight: 5
-    - name: "사용기"
+    - name: "후기"
       url: "/reviews/"
       weight: 6
     - name: "시놀로지"
@@ -55,6 +55,9 @@ menu:
       weight: 8
     - name: "배당기록"
       url: "/dividends/"
+      weight: 9
+    - name: "태그"
+      url: "/tags/"
       weight: 9
 
 # 태그 / 카테고리
