누락된 카테고리 추가

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -71,6 +71,7 @@ permalinks:
   daily: "/daily/:slug/"
   travel: "/travel/:slug/"
   gourmet: "/gourmet/:slug/"
+  reviews: "/reviews/:slug/"
   synology: "/synology/:slug/"
   stocks: "/stocks/:slug/"
   dividends: "/dividends/:slug/"
