마크업에서 타이포그래퍼 설정

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -21,6 +21,8 @@ markup:
   goldmark:
     renderer:
       unsafe: true
+    extensions:
+      typographer: true
   tableOfContents:
     startLevel: 1
   highlight:
